Made changes in index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 amet praesentium minus illum maiores, suscipit facilis aperiam accusamus officiis. Numquam possimus
                 natus eius a repudiandae accusantium, ut, ullam nam labore perferendis explicabo beatae ipsa omnis ea
                 non voluptatem. Cupiditate error debitis, numquam asperiores autem porro eveniet saepe! Est id obcaecati
-                ducimus ea totam a.</p>
+                ducimus ea totam a Lorekwkjw.</p>
         </div>
     </div>
 </body>
